<resources>
    <string name="app_name">lesson3</string>
    <string name="false_button">false</string>
    <string name="true_button">true</string>
    <string name="next_button">next</string>
    <string name="some_textview">Some</string>
    <string name="question_australis">Caberra is the capital of Australia.</string>
    <string name="question_oceans">The pacific Ocean is larger than the Autlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="correct_toast">ok</string>
    <string name="incorrect_toast">WRONG</string>
    <string name="prev_button">previous</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgnet_toast">Cheating is wrong</string>
</resources>